添加部分模块静态页面
Signed-off-by: simon <simonHlf@163.com>

--- a/app.json
+++ b/app.json
@@ -1,11 +1,12 @@
 {
   "pages": [
+    "pages/rqDev/index",
+    "pages/potTrade/index",
     "pages/rqMaoyi/index",
     "pages/mine/index",
     "pages/index/index",
     "pages/lngHq/index",
-    "pages/msg/index",
-    "pages/autorLogin/index"
+    "pages/msg/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
