--- a/app.json
+++ b/app.json
@@ -1,12 +1,13 @@
 {
   "pages": [
+	  "pages/lngHq/filter",
     "pages/lngHq/index",
     "pages/lngHqDet/index",
     "pages/lngHqYzbg/index",
     "pages/lngHqMsg/leaveMsg",
     "pages/lngHqMsg/lngHqMsgDet",
     "pages/lngHqMsg/index",
-    "pages/lngHqMysList/index", 
+    "pages/lngHqMysList/index",
     "pages/index/index",
     "pages/rqDev/index",
     "pages/potTrade/index",
