添加燃气设备详情
Signed-off-by: simon <simonHlf@163.com>

--- a/app.json
+++ b/app.json
@@ -1,5 +1,7 @@
 {
   "pages": [
+	 
+	"pages/rqDev/rqDevDet",
     "pages/pubRqTrade/index",
     "pages/rqDevSellerDet/index",
     "pages/rqMySellerDet/index",
