--- a/app.json
+++ b/app.json
@@ -1,12 +1,11 @@
 {
   "pages": [
-	 
-	"pages/rqDev/rqDevDet",
     "pages/pubRqTrade/index",
+    "pages/rqMaoyi/index",
+    "pages/lngHq/index",
+    "pages/rqDev/rqDevDet",
     "pages/rqDevSellerDet/index",
     "pages/rqMySellerDet/index",
-    "pages/lngHq/index",
-    "pages/lngHq/filter",
     "pages/msg/index",
     "pages/lngHqDet/index",
     "pages/lngHqYzbg/index",
@@ -17,9 +16,11 @@
     "pages/index/index",
     "pages/rqDev/index",
     "pages/potTrade/index",
-    "pages/rqMaoyi/index",
     "pages/mine/index",
-    "pages/rqMaoyi/filter"
+    "pages/rqMaoyi/filter",
+    "pages/basic/getCpyList/index",
+    "pages/basic/getLqFactory/index",
+    "pages/basic/getPsArea/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
