添加各种买卖表单
Signed-off-by: simon <simonHlf@163.com>

--- a/app.json
+++ b/app.json
@@ -1,11 +1,14 @@
 {
   "pages": [
+	"pages/pubTrucksTrade/index",
+    "pages/pubRqDev/index",
+    "pages/pubPotTrade/index",
     "pages/rqMaoyi/index",
+    "pages/rqMySellerDet/index",
     "pages/rqDev/rqDevDet",
-	"pages/pubRqTrade/index",
+    "pages/pubRqTrade/index",
     "pages/lngHq/index",
     "pages/rqDevSellerDet/index",
-    "pages/rqMySellerDet/index",
     "pages/msg/index",
     "pages/lngHqDet/index",
     "pages/lngHqYzbg/index",
