添加槽车买卖模块
Signed-off-by: simon <simonHlf@163.com>

--- a/app.json
+++ b/app.json
@@ -1,14 +1,15 @@
 {
   "pages": [
-	"pages/pubTrucksTrade/index",
-    "pages/pubRqDev/index",
+    "pages/pubTrucksTrade/index",
+    "pages/potTrade/index",
     "pages/pubPotTrade/index",
+    "pages/rqDev/index",
+    "pages/pubRqDev/index",
     "pages/rqMaoyi/index",
     "pages/rqMySellerDet/index",
     "pages/rqDev/rqDevDet",
     "pages/pubRqTrade/index",
     "pages/lngHq/index",
-    "pages/rqDevSellerDet/index",
     "pages/msg/index",
     "pages/lngHqDet/index",
     "pages/lngHqYzbg/index",
@@ -17,15 +18,25 @@
     "pages/lngHqMsg/index",
     "pages/lngHqMysList/index",
     "pages/index/index",
-    "pages/rqDev/index",
-    "pages/potTrade/index",
     "pages/mine/index",
     "pages/rqMaoyi/filter",
     "pages/basic/getCpyList/index",
     "pages/basic/getLqFactory/index",
     "pages/basic/getPsArea/index",
     "pages/basic/getCarCardNum/index",
-    "pages/basic/getDriverYyy/index"
+    "pages/basic/getDriverYyy/index",
+    "pages/basic/getRqDevLmType/index",
+    "pages/rqDev/filter",
+    "pages/basic/getPotBand/index",
+    "pages/basic/getZzjz/index",
+    "pages/potTrade/filter",
+    "pages/potTradeSellerDet/index",
+    "pages/basic/getTrucksType/index",
+    "pages/basic/getTruckHeadType/index",
+    "pages/basic/getTruckHeadBrand/index",
+    "pages/basic/getJgzz/index",
+    "pages/basic/getWqpfbz/index",
+    "pages/basic/getGasType/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
