添加司机求职模块
Signed-off-by: simon <simonHlf@163.com>

--- a/app.json
+++ b/app.json
@@ -1,5 +1,8 @@
 {
   "pages": [
+	"pages/driverQz/index",
+    "pages/trucksSellDet/index",
+    "pages/trucksTrade/index",
     "pages/pubTrucksTrade/index",
     "pages/potTrade/index",
     "pages/pubPotTrade/index",
