--- a/app.json
+++ b/app.json
@@ -1,8 +1,12 @@
 {
   "pages": [
-	"pages/pubDriverQz/index",
-    "pages/driverQz/index",
+    "pages/driverQzDet/index",
+    "pages/pubDriverZp/index",
     "pages/index/index",
+    "pages/pubRqTrade/index",
+    "pages/basic/addDriverYyy/index",
+    "pages/pubDriverQz/index",
+    "pages/driverQz/index",
     "pages/trucksTrade/index",
     "pages/pubTrucksTrade/index",
     "pages/basic/addCpGcpNum/index",
@@ -14,7 +18,6 @@
     "pages/rqMaoyi/index",
     "pages/rqMySellerDet/index",
     "pages/rqDev/rqDevDet",
-    "pages/pubRqTrade/index",
     "pages/lngHq/index",
     "pages/msg/index",
     "pages/lngHqDet/index",
@@ -42,7 +45,9 @@
     "pages/basic/getJgzz/index",
     "pages/basic/getWqpfbz/index",
     "pages/basic/getGasType/index",
-    "pages/trucksTrade/filter"
+    "pages/trucksTrade/filter",
+    "pages/driverZp/index",
+    "pages/driverZpDet/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
