完成司机招聘求职模块
Signed-off-by: simon <simonHlf@163.com>

--- a/app.json
+++ b/app.json
@@ -1,13 +1,18 @@
 {
   "pages": [
-	  "pages/pubDriverZp/index",
-    "pages/driverQz/index",
-    "pages/pubDriverQz/index",
-    "pages/rqMaoyi/index",
-    "pages/hangyeZixun/index",
+	  "pages/mine/index",
+    "pages/perInfo/index",
+    "pages/msg/index",
     "pages/index/index",
-    "pages/driverZpDet/index",
+    "pages/hangyeZixun/index",
+    "pages/hangyeZixun/zixunDet",
+    "pages/driverQz/index",
+    "pages/potTrade/index",
+    "pages/rqMaoyi/index",
     "pages/driverZp/index",
+    "pages/pubDriverZp/index",
+    "pages/pubDriverQz/index",
+    "pages/driverZpDet/index",
     "pages/driverQzDet/index",
     "pages/pubRqTrade/index",
     "pages/basic/addDriverYyy/index",
@@ -15,21 +20,18 @@
     "pages/pubTrucksTrade/index",
     "pages/basic/addCpGcpNum/index",
     "pages/trucksSellDet/index",
-    "pages/potTrade/index",
     "pages/pubPotTrade/index",
     "pages/rqDev/index",
     "pages/pubRqDev/index",
     "pages/rqMySellerDet/index",
     "pages/rqDev/rqDevDet",
     "pages/lngHq/index",
-    "pages/msg/index",
     "pages/lngHqDet/index",
     "pages/lngHqYzbg/index",
     "pages/lngHqMsg/leaveMsg",
     "pages/lngHqMsg/lngHqMsgDet",
     "pages/lngHqMsg/index",
     "pages/lngHqMysList/index",
-    "pages/mine/index",
     "pages/rqMaoyi/filter",
     "pages/basic/getCpyList/index",
     "pages/basic/getLqFactory/index",
@@ -49,8 +51,8 @@
     "pages/basic/getWqpfbz/index",
     "pages/basic/getGasType/index",
     "pages/trucksTrade/filter",
-    "pages/hangyeZixun/zixunDet",
-    "pages/driverQz/filter"
+    "pages/driverQz/filter",
+    "pages/myCompany/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
