--- a/app.json
+++ b/app.json
@@ -1,11 +1,18 @@
 {
   "pages": [
-	"pages/index/index",
-	"pages/myCompany/index",
-	"pages/pubTrucksTrade/index",
-	"pages/pubPotTrade/index",
-	"pages/trucksTrade/index",
-	"pages/myZp/index",
+	  "pages/myCompany/index",
+	"pages/joinCompany/index",
+    "pages/index/index",
+    "pages/potTrade/index",
+    "pages/lngHqMsg/index",
+    "pages/rqDev/index",
+    "pages/trucksTrade/index",
+    "pages/pubTrucksTrade/index",
+    "pages/rqMaoyi/index",
+    "pages/buyRqMyTrade/index",
+    "pages/rqMySellerDet/index",
+    "pages/pubPotTrade/index",
+    "pages/myZp/index",
     "pages/myResume/index",
     "pages/mine/index",
     "pages/feedBack/index",
@@ -14,12 +21,10 @@
     "pages/myCompany/companyDet",
     "pages/basic/addDriverYyy/index",
     "pages/perInfo/index",
-    "pages/msg/index", 
+    "pages/msg/index",
     "pages/hangyeZixun/index",
     "pages/hangyeZixun/zixunDet",
     "pages/driverQz/index",
-    "pages/potTrade/index",
-    "pages/rqMaoyi/index",
     "pages/driverZp/index",
     "pages/pubDriverZp/index",
     "pages/pubDriverQz/index",
@@ -28,16 +33,13 @@
     "pages/pubRqTrade/index",
     "pages/basic/addCpGcpNum/index",
     "pages/trucksSellDet/index",
-    "pages/rqDev/index",
     "pages/pubRqDev/index",
-    "pages/rqMySellerDet/index",
     "pages/rqDev/rqDevDet",
     "pages/lngHq/index",
     "pages/lngHqDet/index",
     "pages/lngHqYzbg/index",
     "pages/lngHqMsg/leaveMsg",
     "pages/lngHqMsg/lngHqMsgDet",
-    "pages/lngHqMsg/index",
     "pages/lngHqMysList/index",
     "pages/rqMaoyi/filter",
     "pages/basic/getCpyList/index",
